# SCARA

./: CMakeLists.txt
include/: auton_routine.h  gpio.h  log.h  servo.h  task_manager.h  terminal.h
src/: auton_routine.cpp  gpio.cpp  main.cpp  servo.cpp  task_manager.cpp  terminal.cpp  timer.cpp
test/: a.out  gpio.c  gpio.cpp  gpio.py  test.c
